2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.1
  * added some test fixtures
  
2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.0
  * added workaround for travis-ci issue #1793
  * disable coveralls for ruby < 1.9
  * initial commit