@@ -1,3 +1,6 @@
+2014-01-07 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * revised documentation in portsx.rb
+  
 2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.1.1
   * added some test fixtures
